<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
	<string name="infos">
		<![CDATA[
		<font color=\'#FF0000\'><b>UnicaRadio</b></font>, la webradio degli studenti universitari di Cagliari.
		<br /><br /><br />
		Software sviluppato da <a href=\'http://code.google.com/p/unicaradio-apps/wiki/Developer\'>Paolo Cortis</a> per conto di <font color=\'#FF0000\'>
		<b>UnicaRadio</b></font>, sotto i termini e le condizioni della licenza GPLv2.
		<br /><br />
		Codice sorgente liberamente scaricabile da <a href=\'http://code.google.com/p/unicaradio-apps/\'>Google Code</a>.
		]]>
	</string>
	<string name="updates">
		Versione 2.0.1\n
		\tCorrezioni:\n
		\t- [mod] Fix grafici;\n
		\t- [bug] Bugfix.\n
		\n
		Versione 2.0\n
		\tNovità e bug risolti:\n
		\t- [mod] Nuova grafica!\n
		\t- [mod] Layout orizzontale e per
		tablet;\n
		\t- [mod] Eliminato il
		captcha per la richiesta di canzoni;\n
		\t- [nuovo] Impostazioni per uso della rete;\n
		\t- [nuovo] Ricevi informazioni
		dalla radio direttamente sull\'app;\n
		\t- [nuovo] Condividi quello che stai ascoltando
		con i tuoi amici;\n
		\t- [bug]
		Crash in presenza di più account Google;\n
		\t- [bug] Dopo un errore o una chiamata il
		pulsante pausa non cambia stato;\n
		\t- [bug] Non funziona su Android >= 4.0;\n
		\n
		Versione 1.1\n
		\tCorrezioni:\n
		\t- [bug]
		L\'applicazione non va in pausa
		all\'arrivo di una chiamata;\n
		\t- [bug] Audio scattoso su alcuni dispositivi;\n
		\t-
		[bug] L\'applicazione si chiude
		quando va in background;\n
		\t- [bug] Palinsesto con orario sbagliato;\n
		\t- [bug] Dopo
		lo stop viene ancora caricata una
		cover;\n
		\t- [bug] Verifica della connessione ad Internet;\n
		\t- [bug] Crash per
		assenza della connessione quando si è in
		play;\n
		\t- [mod] Invio mail senza ulteriore conferma;\n
		\t- [mod] Nuovi
		pulsanti di play e pausa;\n
		\t- [mod] Grafica
		palinsesto a colori sfalsati;\n
		\t- [nuovo] Notifiche.\n
		\n
		Versione 1.0:\n
		\t- Prima versione.\n
	</string>
	<string name="application_updated">Aggiornamento</string>

	<string-array name="days">
		<item>Lunedì</item>
		<item>Martedì</item>
		<item>Mercoledì</item>
		<item>Giovedì</item>
		<item>Venerdì</item>
		<item>Sabato</item>
		<item>Domenica</item>
	</string-array>

	<string name="wait_dialog_default_title">Caricamento&#8230;</string>
	<string name="wait_dialog_default_message">Caricamento in corso.</string>

	<string name="toast_error_connection_lost">Connessione persa.</string>

	<string name="suggest_subject">Ascolta UnicaRadio!</string>
	<string name="suggest_content">Ascolta UnicaRadio, la webradio degli studenti universitari di Cagliari.\n\nVisita
		www.unicaradio.it e scarica l\'app! http://play.google.com/store/apps/details?id=it.unicaradio.android
	</string>
	<string name="suggest_content_only_author">Sto ascoltando {0} su UnicaRadio! www.unicaradio.it</string>
	<string name="suggest_content_song">Sto ascoltando {0} di {1} su UnicaRadio! www.unicaradio.it</string>

	<!-- Preferences -->

	<!-- network_type -->
	<string name="prefs_network_type_title">Ascolta la radio</string>
	<string name="prefs_network_type_dialogtitle">Ascolta la radio</string>
	<string-array name="prefs_network_type_entries">
		<item>Su rete Wi-Fi o mobile</item>
		<item>Solo su rete Wi-Fi</item>
	</string-array>
	<string name="prefs_network_type_mobiledata_label">Se è disponibile una connessione dati Wi-Fi o mobile</string>
	<string name="prefs_network_type_wifi_label">Solo se è disponibile una connessione Wi-Fi</string>

	<!-- download_cover -->
	<string name="prefs_download_cover_title">Scaricare le copertine</string>
	<string name="prefs_download_cover_dialogtitle">Scaricare le copertine</string>
	<string-array name="prefs_download_cover_entries">
		<item>Su rete Wi-Fi o mobile</item>
		<item>Solo su rete Wi-Fi</item>
		<item>Mai</item>
	</string-array>
	<string name="prefs_download_cover_mobiledata_label">Se è disponibile una connessione dati Wi-Fi o mobile</string>
	<string name="prefs_download_cover_wifi_label">Solo se è disponibile una connessione Wi-Fi</string>
	<string name="prefs_download_cover_never_label">Non scaricare mai le copertine</string>

	<!-- permit_roaming -->
	<string name="prefs_permit_roaming_title">Ascolto radio in roaming</string>
	<string name="prefs_permit_roaming_summaryOn">Puoi ascoltare UnicaRadio in roaming su rete dati</string>
	<string name="prefs_permit_roaming_summaryOff">Non ascoltare UnicaRadio se il roaming su rete dati è attivo</string>

	<!-- Category: gcm_messages -->
	<string name="prefs_gcm_messages_category">Messaggi</string>

	<!-- gcm messages -->
	<string name="prefs_gcm_enable_low_messages_title">Messaggi a bassa priorità</string>
	<string name="prefs_gcm_enable_low_messages_summaryOn">Sono attivi tutti i tipi di messaggi</string>
	<string name="prefs_gcm_enable_low_messages_summaryOff">Non riceverai i messaggi a bassa priorità</string>
	<string name="prefs_gcm_info_title">I messaggi UnicaRadio</string>
	<string name="prefs_gcm_info_summary">Cosa sono questi messaggi?</string>

	<!-- Category: app_infos -->
	<string name="prefs_app_infos_category">Informazioni e licenze</string>

	<!-- app_version -->
	<string name="prefs_app_version_title">Versione app</string>

	<!-- licenses -->
	<string name="prefs_aacdecoder">AACDecoder v.0.6.1 by Spoledge</string>
	<string name="prefs_aacdecoder_sub">Apache license 2.0</string>

	<string name="prefs_abs">ActionBarSherlock v.4.1.0 by Jake Wharton</string>
	<string name="prefs_abs_sub">Apache license 2.0</string>

	<string name="prefs_acra">ACRA v.4.4.0 by Kevin Gaudin</string>
	<string name="prefs_acra_sub">Apache license 2.0</string>

	<string name="prefs_acra_details">Informazioni su ACRA</string>
	<string name="prefs_acra_details_sub">Come viene usato ACRA su UnicaRadio</string>

	<string name="prefs_gcm">Google Cloud Messaging</string>
	<string name="prefs_gcm_sub">Versione 1.0.2</string>

	<string name="prefs_wversionmanager">Android-WVersionManager v.1.0 by Winson Tan</string>
	<string name="prefs_wversionmanager_sub">Apache license 2.0</string>

	<!-- Menu -->
	<string name="menu_settings">Impostazioni</string>
	<string name="menu_refresh_schedule">Aggiorna palinsesto</string>
	<string name="menu_suggest">Suggerisci agli amici</string>
	<string name="menu_song_send">Invia</string>

	<!-- layouts -->
	<string name="streaming_author">Autore:</string>
	<string name="streaming_title">Titolo:</string>
	<string name="streaming_onair">Ora in onda:</string>

</resources>
