<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<ListPreference
		android:key="network_type"
		android:title="@string/prefs_network_type_title"
		android:dialogTitle="@string/prefs_network_type_dialogtitle"
		android:entries="@array/prefs_network_type_entries"
		android:entryValues="@array/prefs_network_type_entryValues"
		android:defaultValue="mobiledata" />

	<ListPreference
		android:key="download_cover"
		android:title="@string/prefs_download_cover_title"
		android:dialogTitle="@string/prefs_download_cover_dialogtitle"
		android:entries="@array/prefs_download_cover_entries"
		android:entryValues="@array/prefs_download_cover_entryValues"
		android:defaultValue="mobiledata" />

	<CheckBoxPreference
		android:key="permit_roaming"
		android:title="@string/prefs_permit_roaming_title"
		android:summaryOn="@string/prefs_permit_roaming_summaryOn"
		android:summaryOff="@string/prefs_permit_roaming_summaryOff"
		android:defaultValue="false" />

	<PreferenceCategory android:title="@string/prefs_app_infos_category">
		<Preference
			android:key="app_version"
			android:title="@string/prefs_app_version_title" />

		<Preference
			android:key="prefs_licences_aacdecoder"
			android:title="@string/prefs_aacdecoder"
			android:summary="@string/prefs_aacdecoder_sub" />

		<Preference
			android:key="prefs_licences_abs"
			android:title="@string/prefs_abs"
			android:summary="@string/prefs_abs_sub" />

		<Preference
			android:key="prefs_licences_acra"
			android:title="@string/prefs_acra"
			android:summary="@string/prefs_acra_sub" />

		<Preference
			android:key="prefs_licences_acra_details"
			android:title="@string/prefs_acra_details"
			android:summary="@string/prefs_acra_details_sub" />

	</PreferenceCategory>

</PreferenceScreen>
